--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
     <link rel="icon" type="image/png" href="/favicon.png">
     <title>SunDownGames</title>
   <h1 id="title">Welcome</1>
-  
+  <img src="/1v1.lol.png"
+      
   <style>
    html {
    background-image: url(/imagebackground.png)
