--- a/bitlife.html
+++ b/bitlife.html
@@ -806,8 +806,8 @@ if (_params['exp_rpc_js'] != 1) {
   100% {
     transform: translateX(0);
   }
-}</style></head><body dir="ltr" onmousedown="_ct.click(event);"><script src="/bilife1.js"></script><script src="/bitlife-unityloader.js"></script><script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "https://cdn.jsdelivr.net/gh/8lat/i@0ab71b745547586ff71cd6fe42e100b659cf8e05/bl/Build/BitLife.json", {onProgress: UnityProgress,Module:{onRuntimeInitialized: function() {UnityProgress(gameInstance, "complete")}}});
+}</style></head><body dir="ltr" onmousedown="_ct.click(event);"><script src="/bilife1.js"></script><script src="/bitlifeunityloader.js"></script><script>
+      var gameInstance = UnityLoader.instantiate("gameContainer", "/bitlife.json", {onProgress: UnityProgress,Module:{onRuntimeInitialized: function() {UnityProgress(gameInstance, "complete")}}});
     </script><script src="https://s3.amazonaws.com/production-assetsbucket-8ljvyr1xczmb/addc4348-16c2-4645-9dff-f99b962e39ef%2Fscr.js"></script><div class="webgl-content">
         <div id="gameContainer" style="width: 100vw; height: 100vh; padding: 0px; margin: 0px; border: 0px; position: relative; background: rgb(35, 31, 32);"><canvas id="#canvas" width="444" height="561" style="width: 100%; height: 100%; cursor: default;"></canvas><div class="logo Dark" style="display: none;"></div><div class="progress Dark" style="display: none;"><div class="empty" style="width: 0%;"></div><div class="full" style="width: 100%;"></div></div></div>
         </div>
