--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html><body><head>
     <link rel="icon" type="image/png" href="/favicon.png">
     <title>SunDownGames</title>
-  <h1 id="title">Welcome</1>
-  <img src="/1v1.lol.png"
+  <h1 id="title">Welcome</h1>
+  <img src="/1v1.lol.png"></img>
       
   <style>
    html {
